// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo component applies correct styles to wrapper component 1`] = `
.c0 {
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 64px;
  height: 64px;
}

.c1 {
  width: 36px;
  height: 36px;
}

@media screen and (max-width:600px) {
  .c0 {
    width: 48px;
    height: 48px;
  }
}

@media screen and (max-width:600px) {
  .c1 {
    width: 28px;
    height: 28px;
  }
}

<div
  class="c0 Test"
  style="display: none;"
>
  <svg
    class="c1"
  />
</div>
`;

exports[`Logo component renders correct tag with component prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 64px;
  height: 64px;
}

.c1 {
  width: 36px;
  height: 36px;
}

@media screen and (max-width:600px) {
  .c0 {
    width: 48px;
    height: 48px;
  }
}

@media screen and (max-width:600px) {
  .c1 {
    width: 28px;
    height: 28px;
  }
}

<a
  class="c0"
>
  <svg
    class="c1"
  />
</a>
`;

exports[`Logo component renders correctly without props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 64px;
  height: 64px;
}

.c1 {
  width: 36px;
  height: 36px;
}

@media screen and (max-width:600px) {
  .c0 {
    width: 48px;
    height: 48px;
  }
}

@media screen and (max-width:600px) {
  .c1 {
    width: 28px;
    height: 28px;
  }
}

<div
  class="c0"
>
  <svg
    class="c1"
  />
</div>
`;
